2.25 "" (released xx.xx.xxxx)

  * Filter rating is disabled for now until it works again.
    Changed: wc/configuration.py, templates/classic/macros/standard.html,
      wc/webgui/context/filterconfig_html.py

  * Put documentation in language specific directories.
    Added: doc/en/*, doc/de/*
    Changed: MANIFEST.in, setup.py

2.24 "Tootsie" (released 10.12.2004)

  * Really ignore encoding errors of HTML content.
    Type: bugfix
    Changed: wc/filter/HtmlParser.py

  * Another fix for MIME type changing.
    Type: bugfix
    Changed: wc/proxy/Headers.py

  * Install both ugettext() and ungettext() into the default namespace
    for translation.
    Make fallback class customizable in get_translator().
    Type: feature
    Changed: wc/i18n.py

  * Encode msg variable of web configuration response. Fixes crash
    when LANG=de_DE@euro was set and the configuration interface was
    requested.
    Type: bugfix
    Changed: wc/webgui/webconfig.py

  * Regenerate the HTML parser with new Bison version 1.875d.
    Also use the now supported Bison memory macros YYMALLOC and
    YYFREE.
    The parser now honors the document type and generates XML-style
    end tags for XHTML documents.
    Type: feature
    Changed: wc/HtmlParser/htmlparse.y

  * Do not try to detect CSS Mime type with the magic(5) database, since
    it is not supported there.
    Introduced an wc.magic.unsupported_types list for that.
    Type: bugfix
    Changed: wc/magic/__init__.py, wc/proxy/HttpServer.py

  * Added german man pages.
    Type: documentation
    Added: docs/de/*.[15]

  * Disable the BinaryCharFilter for Unicode data since the HTML
    parser does not yet support Unicode.
    Type: bugfix
    Changed: wc/filter/BinaryCharFilter.py

  * Honor nomatchurl when applying header rules.
    Type: bugfix
    Changed: wc/filter/Header.py

  * Do not add duplicate rules to filter modules.
    Type: bugfix
    Changed: wc/configuration.py

2.23 "The fog of war" (released 27.10.2004)
